objects/agf__ADM_Sprint__c.object
<CustomObject>
    <customHelpPage>agf__ADM_CreateSprintOverview</customHelpPage>
    <description>Added to support User Story for Scrumforce integration into GUS.</description>
    <fields>
        <fullName>agf__Backlog__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ADM_SprintBacklog?id=&quot; &amp;  Id , &quot;View Backlog&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backlog</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Completed_Story_Points__c</fullName>
        <label>Velocity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Days_Remaining__c</fullName>
        <formula>IF( TODAY() &lt; agf__Start_Date__c, &apos;NOT STARTED&apos;, IF( agf__End_Date__c &gt;= TODAY(), TEXT( ROUND(agf__End_Date__c - TODAY(), 0) + 1 ), &apos;CLOSED&apos; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Definition_of_Done_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Definition of Done Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Definition_of_Ready_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Definition of Ready Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Discount_Work__c</fullName>
        <defaultValue>0</defaultValue>
        <description>% to take off of the total time available</description>
        <label>Discount work time (%)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>agf__End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Goals__c</fullName>
        <label>Goals</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Hours_in_a_work_day__c</fullName>
        <defaultValue>6</defaultValue>
        <label>Hours in a work day</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__NameValidator__c</fullName>
        <description>This field is used to enforce a unique name as the standard Name field does not offer the option to enforce uniqueness.</description>
        <label>NameValidator</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Projected_Velocity__c</fullName>
        <label>Projected Velocity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Release_Burndown_Calc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal field used by the system to figure out if it should calculate a release burndown for this sprint. This field is updated by a Time Based Workflow and causes a trigger action to fire and calculate the Release_Burndown_Item__c</description>
        <label>Release Burndown Calculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Retrospective__c</fullName>
        <defaultValue>&quot;What went well? --&gt; &quot;  &amp; BR()  &amp;  &quot;What didn&apos;t go well? --&gt;&quot;  &amp; BR()  &amp; &quot;What can we do differently? --&gt;&quot;</defaultValue>
        <label>Retrospective</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Risks__c</fullName>
        <label>Risks</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scrum Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Sprint_Timeframe__c</fullName>
        <description>The first 8 characters of the sprint name</description>
        <formula>trim(LEFT(Name,8))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint Timeframe YYYY.MMx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Total_Workdays__c</fullName>
        <label>Total Workdays</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Transformed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transformed</label>
        <type>Checkbox</type>
    </fields>
    <label>Sprint</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__GUS_Sprints</fullName>
        <columns>NAME</columns>
        <columns>agf__Days_Remaining__c</columns>
        <columns>agf__Start_Date__c</columns>
        <columns>agf__End_Date__c</columns>
        <columns>agf__Completed_Story_Points__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Scrum_Team__c</field>
            <operation>equals</operation>
            <value>GUS</value>
        </filters>
        <label>GUS Sprints</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Hours_In_A_Work_Day</fullName>
        <active>true</active>
        <description>Limit hours in a work day to a maximum of 24</description>
        <errorConditionFormula>agf__Hours_in_a_work_day__c &gt; 24</errorConditionFormula>
        <errorDisplayField>agf__Hours_in_a_work_day__c</errorDisplayField>
        <errorMessage>Hours in a work day cannot exceed 24</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Hours_In_A_Work_Day_Neg</fullName>
        <active>true</active>
        <description>Limit hours in a work day to positive numbers</description>
        <errorConditionFormula>agf__Hours_in_a_work_day__c &lt; 0</errorConditionFormula>
        <errorDisplayField>agf__Hours_in_a_work_day__c</errorDisplayField>
        <errorMessage>Hours in a work day cannot be a negative number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Projected_Velocity_Neg</fullName>
        <active>true</active>
        <description>Limit projected velocity to positive numbers</description>
        <errorConditionFormula>agf__Projected_Velocity__c &lt; 0</errorConditionFormula>
        <errorDisplayField>agf__Projected_Velocity__c</errorDisplayField>
        <errorMessage>Projected velocity cannot be a negative number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Scrum_Team_Is_Active</fullName>
        <active>true</active>
        <errorConditionFormula>agf__Scrum_Team__r.agf__Active__c = false</errorConditionFormula>
        <errorMessage>The scrum team you selected is not active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Verify_end_date</fullName>
        <active>true</active>
        <description>Make sure that end date &gt; start date (accidents happen)</description>
        <errorConditionFormula>agf__Start_Date__c &gt;= agf__End_Date__c</errorConditionFormula>
        <errorMessage>Your End Date must be after your Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Verify_length_of_sprint</fullName>
        <active>true</active>
        <description>make sure sprint length is &lt;= 31</description>
        <errorConditionFormula>(agf__End_Date__c - agf__Start_Date__c) &gt; 31</errorConditionFormula>
        <errorDisplayField>agf__End_Date__c</errorDisplayField>
        <errorMessage>A sprint can&apos;t be longer than one month (31 days). Please correct your end date and click &apos;Save&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Verify_name_format</fullName>
        <active>true</active>
        <description>Will verify that the name of the sprint fits the following format:
20YY.MM[a-z] - &lt;letters&gt;</description>
        <errorConditionFormula>OR(
    NOT( CONTAINS( &quot;2&quot;, LEFT(Name, 1) ) ),
    NOT( CONTAINS( &quot;0&quot;, MID(Name, 2, 1) ) ),
    NOT( CONTAINS( &quot;0123456789&quot;, MID(Name, 3, 1) ) ),
    NOT( CONTAINS( &quot;0123456789&quot;, MID(Name, 4, 1) ) ),
    NOT( CONTAINS(&quot;.&quot;, MID(Name, 5,1) ) ),
    NOT( CONTAINS( &quot;0123456789&quot;, MID(Name, 6, 1) ) ),
    NOT( CONTAINS( &quot;0123456789&quot;, MID(Name, 7, 1) ) ),
    NOT( CONTAINS(&quot; abcdef0123456789&quot;, MID(Name, 8,1) ) )
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Your sprint should follow the format: YYYY.MM(0-9 or a-f) - &lt;Team Name&gt;4 digit year, 2 digit month, optional (0-9 or a-f) - &lt;your team name&gt;</errorMessage>
    </validationRules>
</CustomObject>